# Aegean

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .project  .pydevproject  .readthedocs.yaml  .travis.yml  AeRes.py  BANE.py  Bwrapper.sh  CHANGELOG.md  Developer_Documentation.md  HpHelper.py  LICENSE  MANIFEST.in  MIMAS.py  README.md  SR6.py  __init__.py  add_uuids.py  aegean.py  aegean_lm.py  archive  bkg_rms_filter.py  bkg_rms_tool.py  check_files  d2v.py  fits_section.py  lm_testing.py  pyproject.toml  requirements.txt  residual.py  setup.py  test_aegean.py  version.sh
.github/workflows/: cd.yml  ci.yml  pypi_publish.yml  python-docs.yml  python-test-doc.yml  python-test.yml
AegeanTools/: AeRes.py  BANE.py  BANE_fft.py  MIMAS.py  __init__.py  angle_tools.py  catalogs.py  cluster.py  convert.py  exceptions.py  fits_image.py  fits_interp.py  fits_tools.py  fitting.py  fix_beam.py  flags.py  logging.py  models.py  mpfit.py  mpi.py  msq2.py  numba_polyfit.py  pprocess.py  regions.py  running_percentile.py  sigma.py  source_finder.py  wcs_helpers.py
AegeanTools/CLI/: AeReg.py  AeRes.py  BANE.py  MIMAS.py  SR6.py  aegean.py
AegeanTools/data/: MOC.fits
Imports/: __init__.py  convert.py  fits_image.py  flags.py  pprocess.py
Test/: bkg_rms.test.py  compare_cat.py  err_test.py  mpiBANE.py  test.sh  test_BANE.sh  test_aegean.sh  test_conversion.py
Test/Catalogs/: 1904_auto.aeg  1904_auto_comp.vot  Bright_s500_f100.aeg  Bright_s500_f100_comp.vot  make_catalogs.sh
Test/Images/: 1904-66_SIN_add100.fits  1904-66_SIN_cube.fits  AIPS_header.fits  Bright.fits  Bright_bkg.fits  Bright_rms.fits  MultiHDU.fits  PD_2000_sub.fits  WCS_edge.fits
aegean/: fits_interp.py  models.py
containers/: Dockerfile  docker_build.sh
doc/: Makefile  api.rst  classes.rst  conf.py  index.rst  make.bat  modules.rst  requirements.txt  scripts.md
doc/includes/: AeReg.md  AeRes.md  BANE.md  MIMAS.md  SR6.md  aegean.md
scripts/: AeReg  AeRes  BANE  BANE_fft  MIMAS  SR6  aegean  aegean.py  fix_beam.py  makepsf  regroup
tests/: make_test_data.py  profile_cluster.py  test_01.py  test_AeRes.py  test_AerRes.py  test_BANE.py  test_MIMAS.py  test_angle_tools.py  test_catalogs.py  test_cluster.py  test_exceptions.py  test_fits_image.py  test_fits_interp.py  test_fits_tools.py  test_fitting.py  test_misc.py  test_models.py  test_msq2.py  test_pprocess.py  test_regions.py  test_source_finder.py  test_wcs_helpers.py
tests/integration/: test_AeReg.py  test_SR6.py  test_aegean.py  test_script_AeReg.py  test_script_AeRes.py  test_script_BANE.py  test_script_MIMAS.py  test_script_SR6.py  test_script_aegean.py
tests/test_files/: 1904-66_SIN.lb.fits  1904-66_SIN.mim  1904-66_SIN_3d.fits  1904-66_SIN_bkg.fits  1904-66_SIN_half.fits  1904-66_SIN_multiHDU.fits  1904-66_SIN_neg.fits  1904-66_SIN_psf.fits  1904-66_SIN_rms.fits  1904-66_bkg_compressed.fits  1904-66_rms_compressed.fits  1904_comp.fits  1904_comp_renamed_cols.fits  1904_incomplete_cat.csv  ds9.reg  mask.fits  small.fits  small.mim  small_3D.fits  small_4D.fits  small_5D.fits  small_bkg.fits  small_rms.fits  synthetic_cat_no_alpha_comp.fits  synthetic_cat_with_alpha_comp.fits  synthetic_cube_psf.fits  synthetic_image.fits  synthetic_image_psf.fits  synthetic_test.fits  synthetic_test_bkg.fits  synthetic_test_psf.fits  synthetic_test_rms.fits  synthetic_with_alpha.fits  synthetic_with_alpha_bkg.fits  synthetic_with_alpha_comp.fits  synthetic_with_alpha_rms.fits
tests/unit/: make_test_data.py  test_AeRes.py  test_BANE.py  test_MIMAS.py  test_addSuffix.py  test_angle_tools.py  test_bane_fft.py  test_catalogs.py  test_cluster.py  test_exceptions.py  test_fits_tools.py  test_fitting.py  test_misc.py  test_models.py  test_mpi.py  test_msq2.py  test_regions.py  test_source_finder.py  test_wcs_helpers.py
treasure_island/: AeRes.py  BANE.py  BANE_fft.py  MIMAS.py  __init__.py  angle_tools.py  catalogs.py  cluster.py  exceptions.py  fits_tools.py  fitting.py  flags.py  models.py  msq2.py  numba_polyfit.py  regions.py  source_finder.py  wcs_helpers.py
treasure_island/CLI/: AeReg.py  AeRes.py  BANE.py  MIMAS.py  SR6.py  aegean.py
