[build-system]
requires = ["hatchling>=1.26", "hatch-vcs"]
build-backend = "hatchling.build"



[project]
name = "treasure-island"
description = "A pirate version of the Aegean source finding program, and associated tools."
readme = "README.md"
license = { text = "AFL-3.0" }
authors = [
    { name = "Alec Thomson"},
    { name = "Tim Galvin"},
    { name = "Paul Hancock", email = "Mr.Paul.Hancock@gmail.com" }
]
requires-python = ">=3.10"
dynamic = ["version"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "scipy>=0.16",
    "tqdm>=4",
    "numpy>=1.22,<2",
    "astropy>=2.0",
    "healpy>=1.10",
    "lmfit>=0.9.2",
    "scikit-learn>=0.24.2",
    "rocket-fft>=0.2.3",
    "numba>=0.58",
    "radio-beam"
]

[project.urls]
Homepage = "https://github.com/flint-crew/treasure-island"
"Bug Tracker" = "https://github.com/flint-crew/treasure-island/issues"
Discussions = "https://github.com/flint-crew/treasure-island/discussions"
Changelog = "https://github.com/flint-crew/treasure-island/releases"

[dependency-groups]
test = [
  "pytest >=6",
  "pytest-cov >=3",
]

[project.scripts]
aegean = "treasure_island.CLI.aegean:main"
BANE = "treasure_island.CLI.BANE:main"
SR6 = "treasure_island.CLI.SR6:main"
AeRes = "treasure_island.CLI.AeRes:main"
MIMAS = "treasure_island.CLI.MIMAS:main"
AeReg = "treasure_island.CLI.AeReg:main"
fix_beam = "treasure_island.CLI.fix_beam:main"
BANE_fft = "treasure_island.CLI.BANE_fft:main"

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "treasure_island/_version.py"
build.include = [
  "scripts/**",
]


[tool.hatch.metadata]
keywords = [
  "image processing",
  "radioastronomy"
]

[project.optional-dependencies]
test = [
  "pytest",
  "nose"
]
