[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "AegeanTools"
description = "README.md"
license = {file = "LICENSE"}
authors = [{name="Paul Hancock", email="Mr.Paul.Hancock@gmail.com"}]
dynamic = ["version"]
requires-python=">=3.9"
dependencies = [
    "scipy>=1.11",
    "tqdm>=4.67",
    "numpy>=2.0",
    "astropy>=6.1",
    "healpy >=1.18",
    "lmfit>=1.3",
    "scikit-learn>=1.7",
    "configargparse>=1.7"
]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: Academic Free License (AFL)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",

]
keywords=["image processing", "radioastronomy"]

[project.scripts]
aegean = "AegeanTools.CLI.aegean:main"
BANE = "AegeanTools.CLI.BANE:main"
SR6 = "AegeanTools.CLI.SR6:main"
AeRes = "AegeanTools.CLI.AeRes:main"
MIMAS = "AegeanTools.CLI.MIMAS:main"
AeReg = "AegeanTools.CLI.AeReg:main"

[project.urls]
Repository = "https://github.com/PaulHancock/Aegean"
Documentation = "http://aegeantools.rtfd.io/"
Issues = "https://github.com/PaulHancock/Aegean/issues"
Changelog = "https://github.com/PaulHancock/Aegean/blob/main/CHANGELOG.md"

[project.optional-dependencies]
fast = ['numba>=0.60.0']
faster = ["AegeanTools[fast]","mpi4py>=4.1"]
dev = ['pytest']

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["AegeanTools*"]

[tool.setuptools.package-data]
AegeanTools = ["MOC.fits"]